# smode-ableton-link

./: CMakeLists.txt  README.md  README.rst  pyproject.toml
examples/: copyToSmode.py  linkHut.py
src/: aalink.cpp
