[build-system]
requires = ["scikit-build-core >=0.4.3"]
build-backend = "scikit_build_core.build"

[project]
name = "smode-ableton-link"
version = "0.0.1"
description = "Async Python interface for integrate ableton link to smode comunity edition"
readme = "README.md"
requires-python = ">=3.7.5"
authors = [
    {name = "fpk", email = "cyrilfpk@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/FluffyPrincesseKoala/smode-ableton-link/tree/main"

[tool.cibuildwheel]
build-verbosity = 1
